first pass working

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,12 +9,12 @@
 <h1>HWH 7th floor spotlight proxy</h1>
 <p>This makes playing with the spotlights a sych. Hopefully the urls give a clue.</p>
 <ul>
-<li><code><a href="">http://lights/both/red</a></code></li>
-<li><code><a href="">http://lights/both/green</a></code></li>
-<li><code><a href="">http://lights/both/blue</a></code></li>
-<li><code><a href="">http://lights/1/red</a></code></li>
-<li><code><a href="">http://lights/2/blue</a></code></li>
-<li><code><a href="">http://lights/both/off</a></code></li>
+<li><code><a href="http://lights.local/all/red">http://lights.local/all/red</a></code></li>
+<li><code><a href="http://lights.local/all/green">http://lights.local/all/green</a></code></li>
+<li><code><a href="http://lights.local/all/blue">http://lights.local/all/blue</a></code></li>
+<li><code><a href="http://lights.local/1/red">http://lights.local/1/red</a></code></li>
+<li><code><a href="http://lights.local/2/blue">http://lights.local/2/blue</a></code></li>
+<li><code><a href="http://lights.local/all/off">http://lights.local/all/off</a></code></li>
 </ul>
 </body>
 </html>
