all the urls work just fine now

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,18 +3,18 @@
 <head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <head>
-<title>7th floor Henry Wood House spotlights controller</title>
+<title>7th floor HWH spotlights controller</title>
 </head>
 <body>
 <h1>HWH 7th floor spotlight proxy</h1>
-<p>This makes playing with the spotlights a sych. Hopefully the urls give a clue.</p>
+<p>Makes playing with the spotlights a sych. The urls are all you need.</p>
 <ul>
-<li><code><a href="http://lights.local/all/red">http://lights.local/all/red</a></code></li>
-<li><code><a href="http://lights.local/all/green">http://lights.local/all/green</a></code></li>
-<li><code><a href="http://lights.local/all/blue">http://lights.local/all/blue</a></code></li>
-<li><code><a href="http://lights.local/1/red">http://lights.local/1/red</a></code></li>
-<li><code><a href="http://lights.local/2/blue">http://lights.local/2/blue</a></code></li>
-<li><code><a href="http://lights.local/all/off">http://lights.local/all/off</a></code></li>
+<li><code><a href="http://lights.local/all/red">http://lights.local/all/(red|green|blue)</a></code></li>
+<li><code><a href="http://lights.local/1/red">http://lights.local/(all|1|2)/red</a></code></li>
+<li><code><a href="http://lights.local/all/off">http://lights.local/(all|1|2)/off</a></code></li>
+<li><code><a href="http://lights.local/all/random">http://lights.local/(all|1|2)/random</a></code></li>
 </ul>
+<p>Simple huh?</p>
+<em>BEWARE: the lights will just queue if everyones trys at the same time</em>
 </body>
 </html>
